--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -115,6 +115,13 @@
     text-align: start !important;
   }
 }
+.navbar {
+  transition: 0.3s ease-in-out;
+}
+.navbar.navbar-stuck {
+  box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.062745098);
+}
+
 .me-0 {
   margin-left: 0 !important;
 }
